--- a/ui/wizard/ui_lookup_entity.ui
+++ b/ui/wizard/ui_lookup_entity.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>254</width>
-    <height>98</height>
+    <width>291</width>
+    <height>100</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>83</x>
-     <y>60</y>
+     <x>123</x>
+     <y>69</y>
      <width>156</width>
      <height>23</height>
     </rect>
@@ -32,8 +32,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>20</y>
+     <x>10</x>
+     <y>36</y>
      <width>64</width>
      <height>16</height>
     </rect>
@@ -51,14 +51,30 @@
   <widget class="QLineEdit" name="edtName">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>20</y>
-     <width>151</width>
+     <x>80</x>
+     <y>36</y>
+     <width>201</width>
      <height>20</height>
     </rect>
    </property>
    <property name="placeholderText">
     <string>Enter lookup name</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>4</y>
+     <width>291</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Please note 'check' will be appended to the name entered</string>
+   </property>
+   <property name="textFormat">
+    <enum>Qt::AutoText</enum>
    </property>
   </widget>
  </widget>
