--- a/ui/wizard/ui_lookup_property.ui
+++ b/ui/wizard/ui_lookup_property.ui
@@ -6,74 +6,56 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>331</width>
-    <height>90</height>
+    <width>337</width>
+    <height>86</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Lookup property</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>59</y>
-     <width>156</width>
-     <height>23</height>
-    </rect>
+  <layout class="QFormLayout" name="formLayout">
+   <property name="verticalSpacing">
+    <number>18</number>
    </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>41</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>200</width>
-     <height>16777215</height>
-    </size>
-   </property>
-   <property name="text">
-    <string>Lookup</string>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="cboPrimaryEntity">
-   <property name="geometry">
-    <rect>
-     <x>50</x>
-     <y>20</y>
-     <width>181</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="insertPolicy">
-    <enum>QComboBox::InsertAtTop</enum>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="edtNewlookup">
-   <property name="geometry">
-    <rect>
-     <x>246</x>
-     <y>18</y>
-     <width>78</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>New lookup ...</string>
-   </property>
-  </widget>
+   <item row="0" column="0" colspan="2">
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <widget class="QLabel" name="label">
+      <property name="maximumSize">
+       <size>
+        <width>200</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Lookup</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="cboPrimaryEntity">
+      <property name="insertPolicy">
+       <enum>QComboBox::InsertAtTop</enum>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="edtNewlookup">
+      <property name="text">
+       <string>New lookup ...</string>
+      </property>
+     </widget>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections>
