--- a/ui/wizard/ui_lookup_value.ui
+++ b/ui/wizard/ui_lookup_value.ui
@@ -6,90 +6,62 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>223</width>
-    <height>117</height>
+    <width>249</width>
+    <height>95</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Lookup value</string>
   </property>
-  <widget class="QDialogButtonBox" name="buttonBox">
-   <property name="geometry">
-    <rect>
-     <x>55</x>
-     <y>88</y>
-     <width>156</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>24</x>
-     <y>20</y>
-     <width>60</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>60</width>
-     <height>0</height>
-    </size>
-   </property>
-   <property name="text">
-    <string>Value Name</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="edtCode">
-   <property name="geometry">
-    <rect>
-     <x>83</x>
-     <y>52</y>
-     <width>131</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>200</width>
-     <height>16777215</height>
-    </size>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>24</x>
-     <y>52</y>
-     <width>25</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Code</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="edtValue">
-   <property name="geometry">
-    <rect>
-     <x>83</x>
-     <y>20</y>
-     <width>130</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <property name="placeholderText">
-    <string>Enter lookup value</string>
-   </property>
-  </widget>
+  <layout class="QFormLayout" name="formLayout">
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="minimumSize">
+      <size>
+       <width>60</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Value Name</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QLineEdit" name="edtValue">
+     <property name="placeholderText">
+      <string>Enter lookup value</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Code</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="edtCode">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+  </layout>
  </widget>
  <tabstops>
   <tabstop>edtValue</tabstop>
