--- a/ui/wizard/ui_column_editor.ui
+++ b/ui/wizard/ui_column_editor.ui
@@ -6,14 +6,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>376</width>
-    <height>305</height>
+    <width>348</width>
+    <height>302</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Column editor</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
+   <property name="verticalSpacing">
+    <number>10</number>
+   </property>
    <item row="0" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
@@ -28,28 +31,28 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="1" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Description</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="1" column="1">
     <widget class="QLineEdit" name="edtColDesc">
      <property name="placeholderText">
       <string>Column Description</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="2" column="0">
     <widget class="QLabel" name="label_11">
      <property name="text">
       <string>User tip</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="2" column="1">
     <widget class="QLineEdit" name="edtUserTip">
      <property name="text">
       <string/>
@@ -59,29 +62,47 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
+   <item row="3" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
       <string>Column data type</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
+   <item row="3" column="1">
     <widget class="QComboBox" name="cboDataType">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="editable">
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="4" column="1">
     <widget class="QPushButton" name="btnColProp">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Column properties ...</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
+   <item row="5" column="1">
     <widget class="QCheckBox" name="cbMandt">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Is mandatory</string>
      </property>
@@ -90,28 +111,46 @@
      </property>
     </widget>
    </item>
-   <item row="12" column="1">
+   <item row="6" column="1">
     <widget class="QCheckBox" name="cbSearch">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Is searchable</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="1">
+   <item row="7" column="1">
     <widget class="QCheckBox" name="cbUnique">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Is unique</string>
      </property>
     </widget>
    </item>
-   <item row="14" column="1">
+   <item row="8" column="1">
     <widget class="QCheckBox" name="cbIndex">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Is column Indexed</string>
      </property>
     </widget>
    </item>
-   <item row="16" column="1">
+   <item row="9" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
